--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -11,10 +11,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <title>Indus HTML5 Free Responsive Template | Template stock</title>
 
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/et-lineicon.css" />
-        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="../../css/et-lineicon.css" />
+        <link rel="stylesheet" type="text/css" href="../../css/font-awesome.min.css" />
+        <link rel="stylesheet" type="text/css" href="../../css/style.css" />
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,400italic,500italic,700' rel='stylesheet' type='text/css'>
         <!--[if IE]>
         	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -41,7 +41,7 @@
                     <div id="countdown_dashboard" class="home-main container">
                         <div class="row">
                             <div class="logo">
-                                <img src="images/logo.png" alt="logo">
+                                <img src="../../images/logo.png" alt="logo">
                                 <p>Find your match among the stars</p>
                             </div>
                         </div>
@@ -254,11 +254,11 @@
         </footer>
             
         <!-- JAVASCRIPTS -->
-        <script src="js/jquery.min.js"></script>
-        <script src="js/jquery.lwtCountdown-1.0.js"></script>
-        <script src="js/jquery.stellar.min.js"></script>
-        <script src="js/jquery.nicescroll.min.js"></script>
-        <script src="js/animated.js"></script>
-        <script src="js/main.js"></script>
+        <script src="../../js/jquery.min.js"></script>
+        <script src="../../js/jquery.lwtCountdown-1.0.js"></script>
+        <script src="../../js/jquery.stellar.min.js"></script>
+        <script src="../../js/jquery.nicescroll.min.js"></script>
+        <script src="../../js/animated.js"></script>
+        <script src="../../js/main.js"></script>
 	</body>
 </html>
