--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -129,7 +129,7 @@
                     <div class="row">
                         <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
                             <label for="pulldown">Sex:</label>
-                                <select name="pulldown" id="pulldown" name="Sex">
+                                <select name="sex" id="pulldown" name="Sex">
                                     <option value="male">Male</option>
                                     <option value="female">Female</option>
                                 </select>
@@ -137,7 +137,7 @@
                         <br><br>
                         <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
                             <label for="pulldown">Day Of Birth:</label>
-                                <select name="pulldown1 "id="pulldown1" name="DayOfBirth">
+                                <select name="day"id="pulldown1" name="DayOfBirth">
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
@@ -174,7 +174,7 @@
                         <br><br>
                         <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
                             <label for="pulldown">Month Of Birth:</label>
-                                <select name="pulldown2" id="pulldown2" name="MonthOfBirth">
+                                <select name="month" id="pulldown2" name="MonthOfBirth">
                                     <option value="1">Jan</option>
                                     <option value="2">Feb</option>
                                     <option value="3">Mar</option>
@@ -192,7 +192,7 @@
                         <br><br>
                         <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
                             <label for="pulldown">Education:</label>
-                                <select name="pulldown3" id="pulldown3" name="Education">
+                                <select name="degree" id="pulldown3" name="Education">
                                     <option value="lt high school">Less than high school</option>
                                     <option value="high school">High School</option>
                                     <option value="junior college">Community College</option>
@@ -203,7 +203,7 @@
                         <br><br>
                         <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
                             <label for="pulldown">Sexual Orientation:</label>
-                                <select name="pulldown4" id="pulldown4" name="Sexual Orientation">
+                                <select name="sexorient" id="pulldown4" name="Sexual Orientation">
                                     <option value="exclusively female">Prefer women</option>
                                     <option value="exclusively male">Prefer men</option>
                                     <option value="both male and female">Prefer both</option>
@@ -212,7 +212,7 @@
                         <br><br>
                         <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
                             <label for="pulldown">How many people named Mark do you know:</label>
-                                <select name="pulldown5" id="pulldown5" name="Mark">
+                                <select name="acqmark" id="pulldown5" name="Mark">
                                     <option value="0">0</option>
                                     <option value="1">1</option>
                                     <option value="2-5">2-5</option>
@@ -222,7 +222,7 @@
                         <br><br>
                         <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
                             <label for="pulldown">Do you agree with this statement: "I am sociable" :</label>
-                                <select name="pulldown6" id="pulldown6" name="Sociable">
+                                <select name="sociability" id="pulldown6" name="Sociable">
                                     <option value="strongly agree">Strongly Agree</option>
                                     <option value="agree">Agree</option>
                                     <option value="neither agree nor disagree">Neutral</option>
