Home Page, Completed

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -9,7 +9,7 @@
 	<head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
-        <title>Indus HTML5 Free Responsive Template | Template stock</title>
+        <title>Pleiades</title>
 
         <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="../static/css/et-lineicon.css" />
@@ -42,7 +42,7 @@
                         <div class="row">
                             <div class="logo">
                                 <img src="../static/images/logo.png" alt="logo">
-                                <p>Find your match among the stars</p>
+                                <p>Find your match among the stars.</p>
                             </div>
                         </div>
                         <div class="row">
@@ -62,8 +62,9 @@
                 <div class="row text-center">
                     <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
                         <div class="main_content">
-                            <h4><strong>Pleiades, your one stop rocket ship to find that someone special</strong></h4>
-                            <p>Meet the person of your dreams thanks to our advanced machine learning algorithm.</p>
+                            <h4><strong>PLEIADES- "The Seven Sisters"</strong></h4>
+                            <p>The Pleiades, also known as "The Seven Sisters" and Messier 45, is an open star cluster containing middle-aged, hot B-type stars in the north-west of the constellation Taurus.
+                                Pleiades is the key to meeting the star of your dreams.</p>
                             
                         </div>  
                     </div>
@@ -81,22 +82,24 @@
                     <div class="col-lg-4 col-md-4">
                         <div class="features-box">
                             <div class="open-overlay"><i class="icon-lightbulb"></i></div>
-                            <h4>High Quality</h4>
-                            <p>Nullam posuere, libero dolor molestie mi, vitae rutrum odio urna non dui.Nullam posuere, libero dolor molestieabd mi, vitae.</p>
+                            <h4>ALQ</h4>
+                            <p>ALQ, 'Astral Love Quotation', is our advanced machine learning algorithm that uses the ALQ value, Pleiades live location, vibration frequency of the universe,
+                                the number of zodiac signs, and the number of stars in Pleiades to find the perfect person for you.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4">
                         <div class="features-box">
-                            <div class="open-overlay"><i class="icon-ribbon"></i></div>
-                            <h4>Great Features</h4>
-                            <p>Nullam posuere, libero dolor molestie mi, vitae rutrum odio urna non dui.Nullam posuere, libero dolor molestieabd mi, vitae.</p>
+                            <div class="open-overlay"><i class="icon-scope"></i></div>
+                            <h4>Star Sign</h4>
+                            <p>We use your data to inform you of your star sign and use this in ALQ.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4">
                         <div class="features-box">
                             <div class="open-overlay"><i class="icon-circle-compass"></i></div>
-                            <h4>Customer Services</h4>
-                            <p>Nullam posuere, libero dolor molestie mi, vitae rutrum odio urna non dui.Nullam posuere, libero dolor molestieabd mi, vitae.</p>
+                            <h4>Star Alignment</h4>
+                            <p> We use our algorithm and live data to track where Pleiades is at all times. This allows you to
+                                find the match that aligns with you at all times.</p>
                         </div>
                     </div>
                 </div>
@@ -111,7 +114,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
-                        <h4>Fill out the Questionncaire</h4>
+                        <h4>Fill out the Questionnaire</h4>
                         <div class="line-separate line-white text-center"><span></span></div>
                         <p>Select the most relevent choice from the dropdown boxes.</p>
                     </div> <!-- end Our Location -->
