--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -129,6 +129,19 @@
                             <input class="" type="text" name="contact_name" id="contact_name" placeholder="Name" />
                         </div> <!-- end Name -->
                     </div>
+
+                    <div class="row">
+                        <div class="col-lg-8 col-md-8 col-lg-offset-2 col-md-offset-2">
+                            <input class="" type="text" name="phone_number" id="phone_number" placeholder="Phone Number" />
+                        </div> <!-- end phone -->
+                    </div>
+
+                    <div class="row">
+                        <div class="col-lg-8 col-md-8 col-lg-offset-2 col-md-offset-2">
+                            <input class="" type="text" name="instagram" id="instagram" placeholder="Instagram" />
+                        </div> <!-- end insta -->
+                    </div>
+
                     <div class="row">
                         <div class="col-lg-8 col-md-8 col-lg-offet-2 col-md-offset-2">
                             <label for="pulldown">Sex:</label>
