--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -114,7 +114,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
-                        <h4>Fill out the Questionnaire</h4>
+                        <h4>Register</h4>
                         <div class="line-separate line-white text-center"><span></span></div>
                         <p>Select the most relevent choice from the dropdown boxes.</p>
                     </div> <!-- end Our Location -->
@@ -126,19 +126,19 @@
                 <form action = "http://localhost:5000/login" name="questionnaireForm" method="POST" >
                     <div class="row">
                         <div class="col-lg-8 col-md-8 col-lg-offset-2 col-md-offset-2">
-                            <input class="" type="text" name="contact_name" id="contact_name" placeholder="Name" />
+                            <input class="" type="text" name="contact_name" id="contact_name" placeholder="Name (First and Last)" />
                         </div> <!-- end Name -->
                     </div>
 
                     <div class="row">
                         <div class="col-lg-8 col-md-8 col-lg-offset-2 col-md-offset-2">
-                            <input class="" type="text" name="phone_number" id="phone_number" placeholder="Phone Number" />
+                            <input class="" type="text" name="phone_number" id="phone_number" placeholder="Phone Number (+1 (923) 123 1234)" />
                         </div> <!-- end phone -->
                     </div>
 
                     <div class="row">
                         <div class="col-lg-8 col-md-8 col-lg-offset-2 col-md-offset-2">
-                            <input class="" type="text" name="instagram" id="instagram" placeholder="Instagram" />
+                            <input class="" type="text" name="instagram" id="instagram" placeholder="Instagram (Pleiades)" />
                         </div> <!-- end insta -->
                     </div>
 
