--- a/main/templates/aries.html
+++ b/main/templates/aries.html
@@ -9,7 +9,9 @@
     <p>The Aries soulmate is a fierce, flirtatious, and emotionally forthright person.
         They enjoy being captivating, and they’re also allured by the idea of being captured.
         Aries seeks out lovers who share their appetite for risk.</p>
-    <button type="button">Match</button>
+    <form action = "http://localhost:5000/match" name="match" method="POST" >
+        <button type="button" name="match">Match</button>
+    </form>
 </head>
 <body>
 
