--- a/main/templates/aries.html
+++ b/main/templates/aries.html
@@ -10,7 +10,7 @@
         They enjoy being captivating, and they’re also allured by the idea of being captured.
         Aries seeks out lovers who share their appetite for risk.</p>
     <form action = "http://localhost:5000/match" name="match" method="POST" >
-        <button type="button" name="match">Match</button>
+        <input type="submit" name="match">Match</input>
     </form>
 </head>
 <body>
