--- a/main/templates/cancer.html
+++ b/main/templates/cancer.html
@@ -7,7 +7,9 @@
     <h1>CANCER</h1>
     <img src="../static/images/Cancer.gif">
     <p>Cancer thrives on the security of close relationships. Strong relationships are the foundation of their sense of well-being. They need to feel loved.</p>
-    <button type="button">Match</button>
+    <form action = "http://localhost:5000/match" name="match" method="POST" >
+        <input type="submit" name="match">Match</input>
+    </form>
 </head>
 <body>
 
