--- a/main/templates/sagittarius.html
+++ b/main/templates/sagittarius.html
@@ -7,7 +7,9 @@
     <h1>SAGITTARIUS</h1>
     <img src="../static/images/Sagittarius.gif">
     <p>A Sagittarius is looking for someone to have a good time with. They want to be able to experience the world without having to worry about the consequences of their actions. They don’t want to be tied down.</p>
-    <button type="button">Match</button>
+    <form action = "http://localhost:5000/match" name="match" method="POST" >
+        <input type="submit" name="match">Match</input>
+    </form>
 </head>
 <body>
 
