--- a/main/templates/taurus.html
+++ b/main/templates/taurus.html
@@ -7,7 +7,9 @@
     <h1>TAURUS</h1>
     <img src="../static/images/Taurus_1.gif">
     <p>Taureans are attracted to people who make them feel safe and comfortable. Taurus are attracted to practical people. People that can cater to the needs that a Taurus may have.</p>
-    <button type="button">Match</button>
+    <form action = "http://localhost:5000/match" name="match" method="POST" >
+        <input type="submit" name="match">Match</input>
+    </form>
 </head>
 <body>
 
