--- a/main/templates/capricorn.html
+++ b/main/templates/capricorn.html
@@ -7,7 +7,9 @@
     <h1>CAPRICORN</h1>
     <img src="../static/images/Capricorn.gif">
     <p>Capricorns do not want your mess. They admire other people who are self-sufficient, who inspire them in some way. Capricorns are motivated by respect. </p>
-    <button type="button">Match</button>
+    <form action = "http://localhost:5000/match" name="match" method="POST" >
+        <input type="submit" name="match">Match</input>
+    </form>
 </head>
 <body>
 
