--- a/main/templates/leo.html
+++ b/main/templates/leo.html
@@ -7,7 +7,9 @@
     <h1>LEO</h1>
     <img src="../static/images/Leo.gif">
     <p>Leos desire someone who can feed them both physically and emotionally. They want to be worshipped. They need to feel like the focus of your attention.</p>
-    <button type="button">Match</button>
+    <form action = "http://localhost:5000/match" name="match" method="POST" >
+        <input type="submit" name="match">Match</input>
+    </form>
 </head>
 <body>
 
