--- a/main/templates/pisces.html
+++ b/main/templates/pisces.html
@@ -7,7 +7,9 @@
     <h1>PISCES</h1>
     <img src="../static/images/Pisces.gif">
     <p>There is a tension between what Pisces need in a partner and what they want. They want a love that overpowers them. They want to be whisked away on some romantic pleasure cruise.</p>
-    <button type="button">Match</button>
+    <form action = "http://localhost:5000/match" name="match" method="POST" >
+        <input type="submit" name="match">Match</input>
+    </form>
 </head>
 <body>
 
