--- a/main/templates/scorpio.html
+++ b/main/templates/scorpio.html
@@ -7,7 +7,9 @@
     <h1>SCORPIO</h1>
     <img src="../static/images/Scorpio.gif">
     <p>Scorpios are attracted to what’s beyond the surface. They want to be with someone who pushes their boundaries, who brings out their most intense desires and most profound fears.</p>
-    <button type="button">Match</button>
+    <form action = "http://localhost:5000/match" name="match" method="POST" >
+        <input type="submit" name="match">Match</input>
+    </form>
 </head>
 <body>
 
