--- a/main/templates/capricorn.html
+++ b/main/templates/capricorn.html
@@ -8,7 +8,7 @@
     <img src="../static/images/Capricorn.gif">
     <p>Capricorns do not want your mess. They admire other people who are self-sufficient, who inspire them in some way. Capricorns are motivated by respect. </p>
     <form action = "http://localhost:5000/match" name="match" method="POST" >
-        <input type="submit" name="match">Match</input>
+        <input type="submit" name="match" value="Match"></input>
     </form>
 </head>
 <body>
