--- a/main/templates/libra.html
+++ b/main/templates/libra.html
@@ -8,7 +8,7 @@
     <img src="../static/images/Libra.gif">
     <p>Libra is a sign that is most easily identified by the contrast between their exteriors and interiors. Their exteriors are sophisticated, composed, and generally pleasant, but the interiors are often murky, insecure, and in a constant state of flux.</p>
     <form action = "http://localhost:5000/match" name="match" method="POST" >
-        <input type="submit" name="match">Match</input>
+        <input type="submit" name="match" value="Match"></input>
     </form>
 </head>
 <body>
