--- a/main/templates/aquarius.html
+++ b/main/templates/aquarius.html
@@ -8,7 +8,7 @@
     <img src="../static/images/Aquarius.gif">
     <p>If you asked an Aquarius to describe their perfect partner in one adjective, they would probably say “ineffable.” They need partners who can understand their need for space without taking it personally.</p>
     <form action = "http://localhost:5000/match" name="match" method="POST" >
-        <input type="submit" name="match">Match</input>
+        <input type="submit" name="match" value="Match"></input>
     </form>
 </head>
 <body>
