--- a/main/templates/cancer.html
+++ b/main/templates/cancer.html
@@ -8,7 +8,7 @@
     <img src="../static/images/Cancer.gif">
     <p>Cancer thrives on the security of close relationships. Strong relationships are the foundation of their sense of well-being. They need to feel loved.</p>
     <form action = "http://localhost:5000/match" name="match" method="POST" >
-        <input type="submit" name="match">Match</input>
+        <input type="submit" name="match" value="Match"></input>
     </form>
 </head>
 <body>
