--- a/main/templates/gemini.html
+++ b/main/templates/gemini.html
@@ -8,7 +8,7 @@
     <img src="../static/images/Gemini.gif">
     <p>Gemini's soulmate is someone who can help them sort through the chaos of their feelings. They need someone who can help them see the more stable side to their personality. Someone who can help them make sense of their life.</p>
     <form action = "http://localhost:5000/match" name="match" method="POST" >
-        <input type="submit" name="match">Match</input>
+        <input type="submit" name="match" value="Match"></input>
     </form>
 </head>
 <body>
