--- a/main/templates/pisces.html
+++ b/main/templates/pisces.html
@@ -8,7 +8,7 @@
     <img src="../static/images/Pisces.gif">
     <p>There is a tension between what Pisces need in a partner and what they want. They want a love that overpowers them. They want to be whisked away on some romantic pleasure cruise.</p>
     <form action = "http://localhost:5000/match" name="match" method="POST" >
-        <input type="submit" name="match">Match</input>
+        <input type="submit" name="match" value="Match"></input>
     </form>
 </head>
 <body>
