--- a/main/templates/sagittarius.html
+++ b/main/templates/sagittarius.html
@@ -8,7 +8,7 @@
     <img src="../static/images/Sagittarius.gif">
     <p>A Sagittarius is looking for someone to have a good time with. They want to be able to experience the world without having to worry about the consequences of their actions. They don’t want to be tied down.</p>
     <form action = "http://localhost:5000/match" name="match" method="POST" >
-        <input type="submit" name="match">Match</input>
+        <input type="submit" name="match" value="Match"></input>
     </form>
 </head>
 <body>
