--- a/main/templates/virgo.html
+++ b/main/templates/virgo.html
@@ -8,7 +8,7 @@
     <img src="../static/images/Virgo.gif">
     <p>Despite their self-professed perfectionism, Virgos can be attracted to a wide variety of people. Virgos are not superficial. They can find the beauty in things that most people would dismiss as unappealing.</p>
     <form action = "http://localhost:5000/match" name="match" method="POST" >
-        <input type="submit" name="match">Match</input>
+        <input type="submit" name="match" value="Match"></input>
     </form>
 </head>
 <body>
