--- a/main/templates/match.html
+++ b/main/templates/match.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="../static/css/match.css" />
 </head>
 <body>
-
-    <p>{{output}}</p>
+    <img src="../static/images/stars.jpg">
+    <p>Your match: </p>
+    <p><br>Name: {{output}}</p>
+    <p><br><br>Zodiac Symbol: {{output4}}</p>
+    <p><br><br><br>Phone #: {{output2}}</p>
+    <p><br><br><br><br>Instagram: {{output3}}</p>
 
 </body>
 </html>
